# CarScreenUI

./: .gitignore  CMakeLists.txt  Main.qml  MediaPlayer.qml  README.md  WORKFLOW.md  main.cpp
components/: BottomBar.qml  NeonButton.qml  NeonGauge.qml  TopBar.qml
content/: ClimateScreen.qml  ControllerWindow.qml  DashboardScreen.qml  Main.qml  MediaScreen.qml  NavBar.qml  NeonBackground.qml  NeonTempDial.qml  TopBar.qml
src/: filescanner.cpp  filescanner.h  vehicledata.cpp  vehicledata.h
